--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -22,5 +22,5 @@ jobs:
     name: Deploy lab
     uses: cabunga/external/.github/workflows/node.yml@main
     with:
-       build-command: actualizacion-workflow-service
+       build-command:  ${{ github.event.inputs.version_semantica }}
   
