--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Check Out Repository
         uses: actions/checkout@v2
-      - name: Checkout davivienda-colombia/davi-coe-action-files-changed-analyze-pipeline
+      - name: Checkout external
         uses: actions/checkout@v3
         with:
           repository: cabunga/external
@@ -23,9 +23,4 @@ jobs:
         run: |
           ls
           echo "Running manual steps with input: ${{ github.event.inputs.version_semantica }}"
-  deploy:    
-    name: Deploy lab
-    uses: cabunga/external/.github/workflows/node.yml
-    with:
-       build-command:  ${{ github.event.inputs.version_semantica }}
   
