--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -18,21 +18,16 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: cabunga/external
+          path: ./.github/workflows
           ref: 'main'        
       - name: Run Manual Steps
         run: |
-          ls
+          ls .github/workflows
           echo "Running manual steps with input: ${{ github.event.inputs.version_semantica }}"
   
-  deploy:
-    name: Checkout external
-    uses: actions/checkout@v3
-    with:
-      repository: cabunga/external
-      ref: 'main' 
-      
+  deploy:      
     name: Deploy lab
-    uses: ./external/.github/workflows/node.yml
+    uses: ./.github/workflows/node.yml
     with:
        build-command:  ${{ github.event.inputs.version_semantica }}
   
