--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -22,8 +22,8 @@ jobs:
           ref: 'main'        
       - name: Run Manual Steps
         run: |
-          ls -ltr /home/runner/work/workflow/workflow/.github/workflows
-          ls .github/workflows
+          ls -altr /home/runner/work/workflow/workflow/.github/workflows
+          ls -a .github/workflows
           echo "Running manual steps with input: ${{ github.event.inputs.version_semantica }}"
   
   
