--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -27,7 +27,7 @@ jobs:
           echo "Running manual steps with input: ${{ github.event.inputs.version_semantica }}"
   deploy:    
     name: Deploy lab
-    uses: ./.github/workflows/node.yml@main
+    uses: ./.github/workflows/node.yml
     with:
        build-command:  ${{ github.event.inputs.version_semantica }}
   
