--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -27,6 +27,7 @@ jobs:
           echo "Running manual steps with input: ${{ github.event.inputs.version_semantica }}"
   Deploy_lab:
      uses: cabunga/external/.github/workflows/node.yml
+     secrets: inherit
      with:
        build-command:  ${{ github.event.inputs.version_semantica }}
   
