--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -59,5 +59,5 @@ jobs:
             echo "PARTITION_IPTV=${{ env.PARTITION_IPTV }}" >> "$GITHUB_OUTPUT"
             echo "PARENT_PARTITION=${{ env.PARENT_PARTITION }}" >> "$GITHUB_OUTPUT"
             echo "SERVICE=${{ env.SERVICE }}" >> "$GITHUB_OUTPUT"
-            echo "secre"${{secrets.USER}}
+            echo "secret ${{secrets.USER}}"
 
