--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -31,6 +31,7 @@ jobs:
   Outputs:
     name: servicio a desplegar
     runs-on: ubuntu-latest
+    environment: develop
     outputs:
       PARTITION_OTT: ${{ steps.outputs.outputs.PARTITION_OTT }}
       PARTITION_IPTV: ${{ steps.outputs.outputs.PARTITION_IPTV }}
