--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -31,7 +31,7 @@ env:
 jobs:
   Outputs:
     name: servicio a desplegar
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     env:
       SUser: ${{ secrets.USER }}
 
