--- a/.github/workflows/dispatch.yaml
+++ b/.github/workflows/dispatch.yaml
@@ -4,6 +4,7 @@ jobs:
   evaluate-actions-consumption:
     runs-on: ubuntu-latest
     steps:
+      - run: echo "inicio"
       - name: Call workflow-runs action
         uses: kittychiu/workflow-metrics@v0.4.7
         env:
